--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@ a {
   color: white;
   font-size: 18px;
   font-weight: bold; 
-
+  background-color: #ec593c;
   background-image: -webkit-gradient(linear, left bottom, left top, from(rgb(231,74,53)), to(rgb(242,104,67))); 
   background-image: -webkit-linear-gradient(bottom, rgb(231,74,53) 0%, rgb(242,104,67) 100%); 
   background-image: -o-linear-gradient(bottom, rgb(231,74,53) 0%, rgb(242,104,67) 100%); 
@@ -94,6 +94,7 @@ a {
 
 .button:hover,
 .button:focus {
+  background-color: #f07a63;
   background-image: -webkit-gradient(linear,left bottom, left top,from(rgb(245,134,105)), to(rgb(236,111,94)));
   background-image: -webkit-linear-gradient(bottom,rgb(245,134,105) 0%, rgb(236,111,94) 100%);
   background-image: -o-linear-gradient(bottom,rgb(245,134,105) 0%, rgb(236,111,94) 100%);
@@ -101,6 +102,7 @@ a {
 }
 
 .button:active {
+  background-color: #db5338;
   background-image: -webkit-gradient(linear, left bottom, left top, from(rgb(242,104,67)), to(rgb(231,74,53)));
   background-image: -webkit-linear-gradient(bottom, rgb(242,104,67) 0%, rgb(231,74,53) 100%);
   background-image: -o-linear-gradient(bottom, rgb(242,104,67) 0%, rgb(231,74,53) 100%);
@@ -330,12 +332,12 @@ a.cart-filled {
 }
 
 .stock-raspberry {
-  background: url("../img/raspberry.jpg") left top no-repeat border-box;
+  background: #68202f url("../img/raspberry.jpg") left top no-repeat border-box;
   border-radius: 15px;
 }
 
 .stock-chocolate {
-  background: url("../img/chocolate.jpg") left top no-repeat border-box;
+  background: #514034 url("../img/chocolate.jpg") left top no-repeat border-box;
   border-radius: 15px;
 }
 
@@ -361,7 +363,7 @@ tr img {
 }
 
 .about-us {
-  background: url("../img/waffle.jpg") left top repeat border-box;
+  background: #eaddbf url("../img/waffle.jpg") left top repeat border-box;
   border-radius: 15px;
   color: #323232;
   line-height: 22px;
@@ -374,13 +376,8 @@ tr img {
   
 }
 
-.news {
-  color: #5a5a5a;
-  background: url("../img/strawberry.jpg") left top no-repeat border-box;
-  border-radius: 15px;
-}
-
 .news h2 {
+  color: #323232;
   font-size: 16px;
 }
 
@@ -399,7 +396,7 @@ tr img {
 }
 
 .news {
-  background: url("../img/strawberry.jpg") no-repeat -25px -225px;
+  background: #ffffff url("../img/strawberry.jpg") no-repeat -25px -225px;
   border-radius: 14px;
 }
 
@@ -423,7 +420,7 @@ tr img {
   left: -5px;
   width: 100%;
   height: 100%;
-  background-image: url("../img/letter.png");
+  background: #ffffff url("../img/letter.png");
   border: 5px solid transparent;
   border-radius: 10px;
   background-origin: border-box;
@@ -719,12 +716,12 @@ img {
   height: 19px;
   top: 6px;
   left: 16px;
-  background: url("../img/login.svg") no-repeat 0 0;
+  background: #9db2a6 url("../img/login.svg") no-repeat 0 0;
 }
 
 .login-button:hover::before,
 .login-button:focus::before {
-  background: url("../img/login_black.svg") no-repeat 0 0;
+  background: #9db2a6 url("../img/login_black.svg") no-repeat 0 0;
 }
 
 .cart-button::before {
@@ -734,7 +731,7 @@ img {
   height: 20px;
   top: 6px;
   left: 16px;
-  background: url("../img/cart.svg") no-repeat 0 0;
+  background: #9db2a6 url("../img/cart.svg") no-repeat 0 0;
 }
 
 .cart-button:not(.cart-filled):hover::before,
@@ -743,7 +740,7 @@ img {
 }
 
 .cart-filled::before {
-  background: url("../img/cart_filled.svg") no-repeat 0 0;
+  background: #f8f7f4 url("../img/cart_filled.svg") no-repeat 0 0;
 }
 
 .search-button {
@@ -868,10 +865,11 @@ img {
 }
 
 .stock-item .button {
-  position: absolute;
-  bottom: 25px;
-  right: 20px;
+  display: inline-block;
   padding: 11px 22px; 
+  margin-top: 45px;
+  float: right;
+  margin-right: 20px;
 }
 
 .catalog {
@@ -989,7 +987,7 @@ img {
   height: 49px;
   top: -10px;
   left: 0;
-  background: url("../img/icon_icecream.svg") no-repeat 0 0;
+  background: #eaddbe url("../img/icon_icecream.svg") no-repeat 0 0;
 }
 
 .description-2::before {
@@ -999,7 +997,7 @@ img {
   height: 49px;
   top: -10px;
   left: 0;
-  background: url("../img/icon_leaf.svg") no-repeat 0 0;
+  background: #eaddbe url("../img/icon_leaf.svg") no-repeat 0 0;
 }
 
 .description-3::before {
@@ -1009,7 +1007,7 @@ img {
   height: 49px;
   top: -10px;
   left: 0;
-  background: url("../img/icon_cow.svg") no-repeat 0 0;
+  background: #eaddbe url("../img/icon_cow.svg") no-repeat 0 0;
 }
 
 .description-4::before {
@@ -1019,7 +1017,7 @@ img {
   height: 49px;
   top: -10px;
   left: 0;
-  background: url("../img/icon_thermo.svg") no-repeat 0 0;
+  background: #eaddbe url("../img/icon_thermo.svg") no-repeat 0 0;
 }
 
 .flex-main {
@@ -1234,7 +1232,7 @@ text-decoration: underline;
   position: absolute;
   width: 15px;
   height: 13px;
-  background: url("../img/heart.svg") no-repeat 0 0;
+  background: #849d8f url("../img/heart.svg") no-repeat 0 0;
   top: 0;
   left: -20px;
 }
@@ -1670,7 +1668,7 @@ top: 0;
   height: 11px;
   padding: 0;
   font-size: 0;
-  background: url("../img/cross_small.svg");
+  background: #f8f7f4 url("../img/cross_small.svg");
   border: 0;
   vertical-align: middle;
   cursor: pointer;
@@ -1693,7 +1691,10 @@ top: 0;
   top: -8px;
   left: -4.86%;
   width: 109.72%;
-  height: 403px;
+  min-height: 353px;
+  height: 100%;
+  box-sizing: content-box;
+  padding-bottom: 60px;
   z-index: -1;
 }
 
@@ -1820,7 +1821,7 @@ top: 0;
   width: 18px;
   height: 17px;
   font-size: 0;
-  background: url("../img/cross.svg");
+  background: #f8f7f4 url("../img/cross.svg");
   border: 0;
   cursor: pointer;
 }
@@ -1874,7 +1875,7 @@ position: relative;
   position: absolute; 
   height: 8px; 
   width: 8px; 
-  background: rgba(255,255,255,1);;
+  background: rgba(255,255,255,1);
   border-radius: 50%; 
   top: 3px; 
   left: 3px; 
